@@ -1,4 +1,8 @@
-﻿- Reduce logging detail
+﻿
+- Wait until confirmation level is fully loaded before generating thumbnails
+- Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
+- Lower z-order of notification panels (to put them behind everything else)
+- Reduce logging detail
 
 
 Version 2.0.3
